# Teknofest_h-rg-r

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
colab_result/: best.json  detector_thresholds.json
configs/: external_datasets.json
docs/: COLAB_THERMAL_SPECIALIST.md  COLAB_TRAINING.md  DATASET_WORKFLOW.md  DETECTION_PHASE3_2026-07-13.md  E2E_NEW_MODEL_TEST_2026-07-13.md  MODEL_COMPARISON_2026-07-13.md  MODEL_STRATEGY.md  POSITION_ESTIMATION_PHASE2_2026-07-13.md  POSITION_ESTIMATION_REAL_DATA_2026-07-14.md  PROFESSIONAL_AUDIT_2026-07-13.md  RUNTIME_QUALIFICATION_2026-07-13.md  TECHNICAL_COMPLIANCE_AUDIT_2026-07-15.md  THERMAL_HUMAN_FUSION_2026-07-15.md  competition_task_plan.md  thermal_data_audit.md
scripts/: bootstrap_venv.sh  collect_metrics.sh  package_colab_training.sh  preflight.sh  prepare_external_datasets.sh  run_endurance.sh  run_mock.sh  run_official.sh  run_official_probe.sh  setup_offline.sh  train_clean_detector.sh
src/hurgor/: __init__.py  camera.py  client.py  config.py  detector_calibration.py  export_models.py  inference.py  logging_utils.py  metrics.py  mock_server.py  modality.py  models.py  odometry.py  official_probe.py  preflight.py  references.py  threaded_pipeline.py  vision.py  watchdog.py
tests/: test_config.py  test_contract.py  test_detector_calibration.py  test_metrics.py  test_models.py  test_odometry.py  test_p0_reliability.py  test_pipeline.py  test_qualification.py  test_reference_benchmark.py  test_threaded_pipeline.py  test_tools.py  test_vision.py
thermal_colab_result/final_model/: args.yaml  best.json  results.csv  test_summary.json
tools/: __init__.py  audit_split_leakage.py  benchmark_detector.py  build_detector_dataset.py  build_grouped_split.py  calibrate_detector_thresholds.py  deduplicate_images.py  download_external_assets.py  evaluate_detector.py  evaluate_detector_fusion.py  evaluate_odometry.py  evaluate_reference_matching.py  evaluate_xoftr_candidate.py  export_detector.py  extract_frames.py  generate_odometry_fixture.py  model_manifest.py  prepare_air_odometry.py  prepare_caltech_thermal_odometry.py  prepare_external_datasets.py  prepare_hit_uav.py  prepare_irs_thermal_odometry.py  prepare_thermal_specialist_dataset.py  prepare_zurich_odometry.py  qualify_runtime.py  remap_classes.py  resplit_yolo_dataset.py  train_detector.py  validate_yolo_labels.py
