[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hurgor-edge-pipeline"
version = "0.1.0"
description = "TEKNOFEST Havacılıkta Yapay Zeka için dayanıklı tek-kare Edge AI haberleşme iskeleti"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pillow>=10,<13",
  "psutil>=6,<8",
  "pydantic>=2.8,<3",
  "python-dotenv>=1,<2",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "ruff>=0.12,<1",
]
ai = [
  "numpy>=2,<3",
  "onnxruntime>=1.20,<2",
  "opencv-python-headless>=4.10,<5",
]
export = [
  "onnx>=1.20,<2",
  "onnxslim>=0.1.82,<1",
  "ultralytics>=8.3,<9",
]
data = [
  "PyYAML>=6,<7",
  "roboflow>=1.2,<2",
]
odometry-data = [
  "PyYAML>=6,<7",
  "rosbags>=0.11,<0.12",
]
matching-eval = [
  "einops>=0.3,<1",
  "gdown>=5,<6",
  "kornia>=0.4.1,<0.5",
  "loguru>=0.5.3,<1",
  "numpy>=2,<3",
  "opencv-python-headless>=4.10,<5",
  "torch>=2,<3",
  "yacs>=0.1.8,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[project.scripts]
hurgor-client = "hurgor.client:main"
hurgor-export-yolo = "hurgor.export_models:main"
hurgor-mock-server = "hurgor.mock_server:main"
hurgor-official-probe = "hurgor.official_probe:main"
hurgor-preflight = "hurgor.preflight:main"
hurgor-metrics = "hurgor.metrics:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hurgor"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
